--- a/homework/Day-27/ex01.html
+++ b/homework/Day-27/ex01.html
@@ -40,6 +40,7 @@
                     <div class="input-email">
                         <input type="email" name="email" placeholder="Email" />
                     </div>
+                    <div class="error-message"></div>
                 </div>
                 <div class="input">
                     <label>Mật khẩu</label>
@@ -47,6 +48,7 @@
                         <input type="password" name="password" placeholder="Mật khẩu" />
                         <i class="fa-solid fa-eye"></i>
                     </div>
+                    <div class="error-message"></div>
                 </div>
                 <button class="sign">Đăng Nhập</button>
             </form>
@@ -69,12 +71,14 @@
                     <div class="input-name">
                         <input type="text" name="name" placeholder="Họ và tên" />
                     </div>
+                    <div class="error-message"></div>
                 </div>
                 <div class="input">
                     <label>Email</label>
                     <div class="input-email">
                         <input type="email" name="email" placeholder="Email" />
                     </div>
+                    <div class="error-message"></div>
                 </div>
                 <div class="input">
                     <label>Mật khẩu</label>
@@ -82,17 +86,13 @@
                         <input type="password" name="password" placeholder="Mật khẩu" />
                         <i class="fa-solid fa-eye"></i>
                     </div>
+                    <div class="error-message"></div>
                 </div>
                 <button class="sign">Đăng Nhập</button>
             </form>
         </div>
         <div class="over-display"></div>
     </div>
-
-
-
-
-
     <script src="js/ex01.js"></script>
 </body>
 
