--- a/học js/ngay11/ex02.html
+++ b/học js/ngay11/ex02.html
@@ -15,7 +15,7 @@
         }
 
         .completed {
-            text-decoration: dashed;
+            text-decoration: line-through;
         }
     </style>
 </head>
