--- a/học js/ngay11/ex03.html
+++ b/học js/ngay11/ex03.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <!-- <h1>DOM CSS</h1>
+    <h1>DOM CSS</h1>
     <div class="box">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam perspiciatis nulla veritatis nemo sint
         corrupti sapiente qui vel vero, iusto, tempora ipsum adipisci nesciunt quibusdam perferendis sequi eos hic
         illum!
     </div>
     <button class="fade-in">FadeIn</button>
-    <button class="fade-out">FadeOut</button> -->
+    <button class="fade-out">FadeOut</button>
     <script src="js/ex03.js"></script>
 </body>
 
