--- a/onl/Bai1/ex07.html
+++ b/onl/Bai1/ex07.html
@@ -15,6 +15,10 @@
             cursor: pointer;
             border-radius: 5px;
         }
+
+        .btn {
+            cursor: move;
+        }
     </style>
 </head>
 
